--- a/gog.org
+++ b/gog.org
@@ -7,32 +7,35 @@
 :END:
 
 \clearpage
-
 * Verk Sends a Message
 
 The Crec's is a peaceful, shady and verdant world. Bright red-orange stones the size of mountains jut out of the otherwise unbroken green here and there. The Crec are a sort of "cavemen". This word will be used unironically throughout. It's how they would describe themselves. In fact, they would fit a surprising number of your stereotypes about cavepeople.
 
-You will have seen the movie. They do wear minimal animal hide clothing. Wouldn't you? Would you waste hide? Would you skip the unnecessary second shoulder strap from time to time? They do indeed look /a bit/ like living cartoons, though they do not know this.
+"Cave", the literal word meaning exactly that, was used as a sort of prefix to denote sophistication and superiority. A "person" was just a person. But a "caveperson" was a sort of gentleman-savage.
 
-They do in fact live in caves! Most of your Hollywood stereotypes are based on what regular, modern humans would invent or do to solve some particular problem, say for a screenplay, given only nature's resources; and that is what the Crec do also, unsurprisingly. It's no wonder that regular, modern people[fn:: For you and the Crec both /are/ modern humans.] converge on many of the same solutions.
+They are rather puritanical as ancient cultures go. They are rather stubborn about their beliefs and will resort to violence over trifles, just as modern humans will do; not an uncommon characteristic.
 
-That's why, say for example, unavoidably having to club a loved one over the head is in fact required on rare occasions. And have you ever tried to get out of the way of an enraged mother baboon? Sometimes you just grab a handful of hair and run for your life. Yes, there is clubbing. And dragging by the hair.
+As a tribe, however, as with most tribes of the time, there was much intra-tribe respect and kindness. The good guys outnumber the bad guys, again, pretty much like everywhere.
 
-Clever analogs to modern vehicles? No, sadly. Those are in the future and they are not great. But warm, furry, if mangy backs abound (They do ride animals, which they domesticate, to a degree.)
+They have their flaws, but they are worth getting to know. Their culture is as rich, self-contradictory, and worth learning about as much as any of the fascinating ancient cultures that your studies have only been able to touch upon. Modern humans are as hopeless and unaware about the enormous gaps in their historical knowledge as just about any that came before.
 
-However, the distribution of tall, rather neat and symmetrical palm trees, and the way the verge of the nearby lagoon is here and there carpeted with some strikingly uniform and very green grass is just as you are thinking. The Crec are not aware that they live in a place so beautiful that, from above, say from a hawk's point-of-view, it looks for all the world like a dioramist's "caveman days" passion project.
+We moderns congratulate ourselves for knowing so very much about, having done a lot of digging and having spent a lot of times at libraries. These cultures, about which we know /some/ are only a small sliver of the reality of what has come and gone here on plain old Earth.
 
-There /are/ saber-toothed tigers. There are also furry, smelly, grumpy rhinoceros.
+We don't /know/ if extraterrestrials exit, but all seem to be pretty confident that they are awesome if they're out there.
 
-It's rather beautiful. The Crec are aware, just as you are, that there is such a thing as timeless beauty.
+It's trivial to make the case that we don't know /all/ that has happened. It's not hard to make the case that the gaps are likely many times what we happen to /know/.
 
-We will get to dinosaurs. It's complicated.
+Therefore, we can be confident that there are cultures of the past that have come and gone, about which we would be utterly fascinated were we able to really /know/. We know in /actuality/ that they are "out there". They can be considered "the aliens we know of".
 
-And pretty much everyone lives in a cave, at least in Crec. Cave, the literal word meaning exactly that, was used as a sort of prefix to denote sophistication and superiority. A "person" was just a person. But a "caveperson" was a sort of gentleman-savage.
+Consider just this: We know of multiple ancient human settlements hundreds of miles from land, so much has the geography changed in recent history.
 
-What is sometimes not so beautiful is how many cave openings often look something like one's droopy, darkened upper eyelid the morning after a socially-acceptable, generous quantity of good juff. This effect is the result of centuries of smoke!
+Back to the Crec and the amazing opportunity we have to know so much about them.
 
-Fire produces smoke, and smoke must go /somewhere/. As the Crec saying goes, "Where there is fire, there is smoke." A bit of light in the early evening is nice. A bit of warmth is even nicer, but not always needed. All year long, fires get used for something or other. And that smoke makes a mess. You would be forgiven if you thought someone was trying to smoke someone else out of their cave. Of course that happens too. There's even a military refinement of this idea: Colonel Thag's Burrow Buster.
+Fire produces smoke, and smoke must go /somewhere/. As the Crec saying goes, "Where there is fire, there is smoke."
+
+A bit of light in the early evening is nice. A bit of warmth is even nicer, but not always needed. All year long, fires get used for something or other.
+
+And that smoke makes a mess. You would be forgiven if you thought someone was trying to smoke someone else out of their cave.
 
 The Zog clan, whom you will soon meet, live in such a cave. A nice cave, for sure.
 
@@ -40,9 +43,13 @@ The enormous irregular mound of red rock in which the Zog clan lived was at this
 
 The same family, all marriage and blood relations, all the way back to the times of Grut[fn:: The great], has continuously occupied the inside of this hill, which was given the name Bhorv Zolk by some anonymous caveman long ago. The name now has as much meaning to them as it does to you.
 
-A hollowed out rock 167 men tall can be a cozy kind of place. The soot above the openings were in this case considered "quaint", and it gave a place for the grandkids to scratch in their names and draw rock-sticks, with a hasty, pleasurable guilt, followed by a rapid retreat. The soot stains above the opening to the parlor were an especially large, especially shameful bit of soot-palette. Grandsons Darcc and Dragg were currently hard at work with rhino soap and a basket of pine cones for scrubbing. Sometimes it's a matter of who gets caught, but sometimes the club of justice falls true.
+A hollowed out rock 167 men tall can be a cozy kind of place. The soot above the openings were in this case considered "quaint", and it gave a place for the small-ones to scratch in their names and draw rock-sticks, with a hasty, pleasurable guilt, followed by a rapid retreat.
 
-Fires make for a cozy cave, and the grand matriarch Nud, Zog's seventh and it would turn out final wife, was the artful, watchful, and opinionated keeper of the fires. Usually this /would/ have meant schlepping wood every late evening to the point of exhaustion, and only after this is done would the cleaning, arranging and lighting take place. No longer! Nud was more the managerial type.
+The soot stains above the opening to the parlor were an especially large and at the current moment, an especially shameful bit of soot-palette. Grandsons Darcc and Dragg were currently hard at work with rhino soap and a basket of pine cones for scrubbing.
+
+Sometimes it's a matter of who gets caught, but sometimes the club of justice falls true.
+
+Fires make for a cozy cave, and the current grand matriarch Nud, Zog's seventh and it would turn out final wife, was the artful, watchful, and opinionated keeper of the fires. Usually this /would/ have meant schlepping wood every late evening to the point of exhaustion, and only after this is done would the cleaning, arranging and lighting take place. No longer! Nud was more the managerial type.
 
 She was currently shouting at Grav, Son of Zog, who was taking a well-earned rest in the ancient-speak burrow, sitting on what was agreed by all to be the most comfortable sit-ham-stone. It had several polished areas to prove its merit. Grav was staring at an upside-down river of smoke that gently flowed in its bed of soot, making its way to the /highest/ point, among all the inverted valleys, cliffs and mesas. Grav was ignoring Nud. It seemed like there was sometimes so much passion-inspired noise coming from his stepmother, it really didn't seem worth trying to mine for the gems (or "value-stone", which is used by the Crec in the same way we use the word "gem" sometimes: "I can't seem to find my favorite spiked club anywhere. It was a /real value-stone/!")
 
