--- a/gog.org
+++ b/gog.org
@@ -9,7 +9,7 @@
 \clearpage
 * Verk Sends a Message
 
-The Crec's is a peaceful, shady and verdant world. Bright red-orange stones the size of mountains jut out of the otherwise unbroken green here and there. The Crec are a sort of "cavemen". This word will be used unironically throughout. It's how they would describe themselves. In fact, they would fit a surprising number of your stereotypes about cavepeople.
+The Crec's is a peaceful, shady and verdant world. Bright red-orange stones the size of mountains jut out of the otherwise unbroken green here and there. The Crec are a sort of "cavemen". Words like this are used unironically throughout this story. It's how they would describe themselves. In fact, they would fit a surprising number of your stereotypes about cavepeople.
 
 "Cave", the literal word meaning exactly that, was used as a sort of prefix to denote sophistication and superiority. A "person" was just a person. But a "caveperson" was a sort of gentleman-savage.
 
