--- a/gog.org
+++ b/gog.org
@@ -9,25 +9,29 @@
 \clearpage
 * Verk Sends a Message
 
-The Crec's is a peaceful, shady and verdant world. Bright red-orange stones the size of mountains jut out of the otherwise unbroken green here and there. The Crec are a sort of "cavemen". Words like this are used unironically throughout this story. It's how they would describe themselves.
+The Crec's was a peaceful, shady and verdant world. Bright red-orange stones the size of mountains jut out of the otherwise unbroken green here and there. The Crec were a sort of "cavemen". Words like this are used unironically throughout this story. It's how they would have described themselves.
 
-"Cave", the literal word meaning exactly that, was used as a sort of prefix to denote sophistication and superiority. A "person" was just a person. But a "caveperson" was a sort of gentleman-savage.
+"Cave", the literal word meaning exactly that, was used by the Crec as a prefix to denote sophistication and superiority. A "person" was just a person. But a "caveperson" was a sort of gentleman-savage.
 
-They are rather puritanical as ancient cultures go. They are rather stubborn about their beliefs and will resort to violence over trifles, just as modern humans will do; not an uncommon characteristic.
+They were rather puritanical as ancient cultures go. They were rather stubborn about their beliefs and would resort to violence over trifles, just as modern humans will do; not an uncommon characteristic.
 
-As a tribe, however, as with most tribes of the time, there was much intra-tribe respect and kindness. The good guys outnumber the bad guys, again, pretty much like everywhere.
+As a tribe, however, as with most tribes, there was much intratribal respect, love, and kindness. And it was genuine. The good guys outnumbered the bad guys, again, pretty much like any sufficiently large collection of humans. This is baked in. We would not have survived otherwise.
 
-They have their flaws, but they are worth getting to know. Their culture is as rich, self-contradictory, and worth learning about as much as any of the fascinating ancient cultures that your studies have only been able to touch upon. Modern humans are as hopeless and unaware about the enormous gaps in their historical knowledge as just about any that came before.
+# let's switch to present tense for fun.
 
-We moderns congratulate ourselves for knowing so very much about, having done a lot of digging and having spent a lot of times at libraries. These cultures, about which we know /some/ are only a small sliver of the reality of what has come and gone here on plain old Earth.
+They have their flaws but they are worth getting to know. Their culture is as rich, tragic, beautiful, and self-contradictory as your average culture, timeline being more or less unimportant. They are worth learning about as much as any of the fascinating ancient cultures that your studies have only been able to touch upon.
 
-We don't /know/ if extraterrestrials exit, but all seem to be pretty confident that they are awesome if they're out there.
+Modern humans are as unaware about the gaps in their historical knowledge as just about any that came before.
 
-It's trivial to make the case that we don't know /all/ that has happened. It's not hard to make the case that the gaps are likely many times what we happen to /know/.
+We moderns congratulate ourselves on knowing so very much about ancient cultures. We went to a lot of trouble to figure all this out, after all. These are only a small sliver of the reality of what has come and gone; just here on plain old Earth.
 
-Therefore, we can be confident that there are cultures of the past that have come and gone, about which we would be utterly fascinated were we able to really /know/. We know in /actuality/ that they are "out there". They can be considered "the aliens we know of".
+We don't /know/ if extraterrestrials exit, but most who have an opinion seem to be pretty confident that they are awesome if they're out there.
 
-Consider just this: We know of multiple ancient human settlements hundreds of miles from land, so much has the geography changed in recent history.
+It's trivial to make the case that we don't know /all/ that has happened here on Earth. It's not much harder to make the case that the gaps are likely many times greater than what we know, or at least think we know.
+
+Therefore, we can be confident that there are cultures of the past that have come and gone, about which we would be utterly fascinated were we able to really /know/ about them. We know in /actuality/ that they are "out there" somewhere in unrecorded history. They can be considered "the aliens we know of".
+
+Consider just this: We know of multiple ancient human settlements hundreds of kilometers from land and under many meters of water, so much has our geography changed in recent history[fn:: Let's say: 15,000 years ago or longer.].
 
 Back to the Crec and the amazing opportunity we have to know so much about them.
 
@@ -45,17 +49,20 @@ The same family, all marriage and blood relations, all the way back to the times
 
 A hollowed out rock 167 men tall can be a cozy kind of place. The soot above the openings were in this case considered "quaint", and it gave a place for the small-ones to scratch in their names and draw rock-sticks, with a hasty, pleasurable guilt, followed by a rapid retreat.
 
-The soot stains above the opening to the parlor were an especially large and at the current moment, an especially shameful bit of soot-palette. Grandsons Darcc and Dragg were currently hard at work with rhino soap and a basket of pine cones for scrubbing.
+The thick soot collected above the opening to the parlor-burrow were an especially large and at the current moment, an especially shameful bit of soot-palette. Grandsons Darcc and Dragg were currently hard at work with rhino soap and a basket of pine cones for scrubbing.
 
 Sometimes it's a matter of who gets caught, but sometimes the club of justice falls true.
 
+yyy
+
 Fires make for a cozy cave, and the current grand matriarch Nud, Zog's seventh and it would turn out final wife, was the artful, watchful, and opinionated keeper of the fires. Usually this /would/ have meant schlepping wood every late evening to the point of exhaustion, and only after this is done would the cleaning, arranging and lighting take place. No longer! Nud was more the managerial type.
 
-She was currently shouting at Grav, Son of Zog, who was taking a well-earned rest in the ancient-speak burrow, sitting on what was agreed by all to be the most comfortable sit-ham-stone. It had several polished areas to prove its merit. Grav was staring at an upside-down river of smoke that gently flowed in its bed of soot, making its way to the /highest/ point, among all the inverted valleys, cliffs and mesas. Grav was ignoring Nud. It seemed like there was sometimes so much passion-inspired noise coming from his stepmother, it really didn't seem worth trying to mine for the gems (or "value-stone", which is used by the Crec in the same way we use the word "gem" sometimes: "I can't seem to find my favorite spiked club anywhere. It was a /real value-stone/!")
 
-Nud continued to nud on, knowing full well Grav's policy on his listening to her. ("Nudding" was an in-joke that of course is not known to Zog's generation, nor to his young, current wife.)
+Having wrapped up the cleaning and dressing of the largest fire in the cave system, Nud was now cleaning the whole ancient-speak burrow.
 
-"I will move momentarily /mother/. Father-Brother Verk is not even here yet."
+She was currently shouting at Grav, Son of Zog, who was taking a well-earned rest in the ancient-speak burrow, sitting on what was agreed by all to be the most comfortable sit-ham-stone. It had several polished areas to prove its merit. Grav was staring at an upside-down river of smoke that gently flowed in its bed of soot, making its way to the /highest/ point, among all the inverted valleys, cliffs and mesas. Grav was ignoring Nud.
+
+"I will move momentarily, /mother/. Father-Brother Verk is not even here yet."
 
 "You'll move now, because I need to clean your nasty stone. Relax-marks are not a thing we show Father-Brother Verk. What do we know they indicate? You know his generation."
 
@@ -69,41 +76,33 @@ Nud grunted elegantly and begin cleaning the area right next to, and indeed unde
 
 Wordlessly, but with all the feeling he could muster, Grav sprung into to an angry jog towards his burrow. Farting loudly in Nud's direction as he left.
 
-He had had a lot to think about with the "enjoyable" family get-together coming closer every day, and now /here/, on this day. It was a miserable thought. Ancient-speak was just a way to list out the things you were supposed to "think". Grav always thought it was truly strange that so many others seemed to have a completely different definition of "think". To Grav, /think/ meant to take what you've seen, heard, and felt in the past and try to use it as a way to /understand/, which in turn to him meant "to be able to predict". This was a relatively new idea of his, but the more he thought about it, the more sense it made. If something could predict something, it made /sense/. It was worthy of scratching down.
+He had a lot to think about with the "enjoyable" family get-together coming closer every day, and now /here/, on this day. It was a miserable thought. /Ancient-speak was just a way to list out the things you were supposed to "think"/ Grav always thought.
 
-It was all about prediction, in Grav's view. Currently he was working on a predict-tool regarding people's behavior. He had several imperfect, but pretty good predict-tools about what things cause different reactions in fellow clan members.
+He'd had a sneaking suspicion that had grown stronger with time, that many, if not most others have a completely different definition of "think".
 
-For instance, he said, "The Chief has made a new take-part-value requirement involving the production mill stones" to Gher, an older great cousin. Before doing this, he made sure he remembered what he thought would happen. Grav put in extra effort to make his delivery as believable as possible. As predicted, in about 5 drop-stone, Gher went through phases of rage, disbelief, some kind of forced serenity, and then rage again. Gher would compose a response in his head, make a "pop" sound with his mouth as he began to speak, but then reconsider as another, better thing to say occurred to him. Grav always wondered why he didn't just decide what he was going to say to begin with, and /then/ open his mouth, possibly even without making a sound.
-
-The response that Gher apparently thought of as the winner in this competition of ideas was as follows:
-
-"A take-value on the working Crec is a take-value on productivity! These Forest-Deer Elders are just out to make the Elders-Quorum bigger all the time!"
-
-Grav made a gentle, mollifying smile, shook his head slowly, and shrugged. He'd been keeping score of his successes and failures. Decidedly a success, this one. His head immediately went to the question of how he would /know/ that. Maybe by the time he walked to his burrow and scratched in this result, his memory of what had happened would be shaped by something along the way. What if one of Gher's daughters had tried to jump-scare him on his way. He did not care for those girls, and he blamed Gher for the kind of people they turned out to be, so far. Who else to blame, the child? Father-Brother Verk would think so. Beat the food-clay out of a disappointing child, repeat until results emerge.
-
-And by the name of After-Die-Monster, signs of Father-Brother Verk's nearing made it to Grav's ears.
+To Grav, /think/ meant to take what you've seen, heard, and felt in the past and try to use it as a way to /understand/, which in turn to him meant "to be able to predict". This was a relatively new idea of his, but the more he thought about it, the more sense it made. If something could predict something, it made /sense/. It was worthy of scratching down.
 
 "He comes! Verk, Son of Jik and his party have been seen moving through Monkey-Tail Pass.", an anonymous clan member shouted just as a general announcement.
 
-That would mean another palm at most.
+That would mean another palm at most. Grav did his best to go back to not thinking in the black silence of his burrow. Most parts of the cave system were nearly pitch black. One would usually do without light, there being few surprises. Yet sound traveled a long way. It didn't get quieter, it got more garbled as echo interferes with echo. It was a trick to really listen. In the blackness of his sleeping quarters it was easy to think, and to listen.
 
-Grav's attention went back to Gher. "That's what /I/ keep saying." Hoping to shake Gher, as he knew a lecture was coming, he retired to his burrow to think about things.
-
----
+-----
 
 Father-Brother Verk, Son of Jik had been sitting in the ancient-speak burrow accepting polite—and completely obligatory offers of refreshment, with forced modesty.
 
-Today Verk would tell all those who gathered (again, compulsory) in the ancient-speak burrow of The Battle of the Snake Meal during The Great Club War and the profound life lessons learned therein.
+Today Verk would tell all those who gathered[fn:: Which for a combination of reasons was literally every inhabitant of BZ xxx.] in the ancient-speak burrow of The Battle of the Snake Meal during The Great Club War and the profound life lessons learned therein.
 
-This wasn't the main objective of his visit, but this was a good crowd-warming tactic and for the audience at least, it was the highlight of Verk's visit ("surely!")
+This was a good crowd-warming tactic. The crowd in this case being literally every occupant of BZ xxx. Everyone attended, guaranteed, and for the audience at least, it was the highlight of Verk's visit.
+
+Verk had other business that would be gotten to in time.
 
 "Shall we all be quiet and let you begin Father-Brother Verk, Son of Jit?", one of the several-finger caveladies doting over him.
 
-"Oh, well. I just." Verk noisily deposited a healthy quantity of bird-scat into a finely woven, and yet unavoidably coarse rag. "Whaaaa... dortyses[fn:: This is an adjective that means 'rubbery and resistant to mastication']!!", he wailed at the ceiling as he sneezed. Verk had a severe allergy to a very poisonous flowering plant that more or less reproduced continuously.
+"Oh, well. I just." Verk noisily deposited a quantity of bird-scat into a finely woven, and yet unavoidably coarse rag. "Whaaaa... dortyses[fn:: This is an adjective that means 'rubbery and resistant to mastication']!!", he wailed at the ceiling as he sneezed. Verk had a severe allergy to a very poisonous flowering plant that more or less reproduced continuously.
 
 "I'll get started. Thank you, rhino-calf."
 
-Verk shifted his weight from one sit-ham to the other in his chair in a way that somehow expressed contempt for everyone in the room. It was rumored that he's had a progressively worsening case of between-ham-fire-pebbles for generations.
+Verk shifted his weight from one ham[fn:: 'Butt cheek', of course. They use this word here as some English speakers may on occasion and the translation efforts have focused on many of the charming allusions the Crec make, especially when they overlap with or challenge us to think about our own in the target language, which in this case is plainly spoken, modern, North-American, 21st Century English. The "target" is relevant here because other languages give different opportunities. You're welcome.] to the other in his chair in a way that somehow expressed contempt for everyone in the room. It was rumored that he's had a progressively worsening case of between-ham-fire-pebbles for generations.
 
 Verk began.
 
@@ -114,12 +113,20 @@ As some of you know, I had a modest part to play in The Battle of the Snake-Meal
 There was a practiced gasp of wonder from the audience.
 #+begin_quote
 
-/The Smash Heard 'round the Forest/, as you know marked its start, as a Clorp soldier laying in wait smashed the great melon helmet right off of a devoted hero who was guarding our position at Rhino-Scat Hill."
+/The Smash Heard 'round the Forest/, as you know marked its start. The story of that bit is simple: A Clorp soldier laying in wait smashed the sturdy-gourd-hat right off of a devoted Forest-Hero who was guarding a position. It happened to be /my/ position at the time as well, which explains my involvement.
 
-What tipped us off was the crack of his sturdy-gourd-hat splitting in two. I just barely saved his life. From within our tactical-burrow we could hear the shouts of the hated Clorp coming our way.
+That Bludgeoned-Hero's[fn:: This term included both those who died in battle of any injury and those with any severe life-altering brain damage. Gonk was of the latter sort.] name was Gonk, Son of Blank[fn:: Longer, grander formal name mentions often include this appendix, 'Son of X'. Here the Crec word for 'blank' is used. It's a linguistic place holder that doesn't mean 'unknown' but is closer to the English 'blank'. Taken altogether it course means 'bastard'.], as you will have learned in your studies.
+
+It is now known that Clorp infiltrator had been hiding behind a rock!
 
 #+end_quote
-Audience members dutifully make faces of disgust at the mention of the name.
+There was an apparently genuine gasp of surprise from the audience.
+#+begin_quote
+
+From within our tactical-burrow we could hear the shouts of the hated Clorp coming our way.
+
+#+end_quote
+Audience members dutifully made faces of disgust at the mention of the name.
 #+begin_quote
 
 It seemed like in no time at all the Clorp were climbing up the scree of Rhino-Scat, mere men away from me. They were slow. The going was slow, but there were many of them. It's a known fact that the ratio was 3 to 1, in /their/ favor.
@@ -130,21 +137,25 @@ Measured gasp from the audience.
 
 We were the defenders, which favors one in battle. They had to do all the slow and treacherous scurrying. We just had to lob rocks down on them. But their number was great, as I mentioned, and soon we were quite literally running low on rocks[fn:: There having been a strike among the ammunition suppliers (they carry rocks up hill), resources ran low off and on throughout Snake-Meal. The strikers supplied their last delivery in the form of their heads.].
 
-Just then, my pal Lu and I realized that almost none of the troops were allowed to know about the boulder-rhino up at the top! We looked at each other seemingly at the same time and both had the idea at the same time. "Are you thinking what I'm thinking?", I said. "/Let's go!/", said Lu.
+Just then, my pal Lu and I realized that almost none of the troops were permitted to know about the boulder-rhino up at the top! We looked at each other seemingly at the same time and both had the idea at the same time. "Are you thinking what I'm thinking?", I said. "/Let's go!/", said Lu.
 
-There it was after a gasping, wheezing sprint up the steep hillside, our "secret" weapon. Why it was kept secret to most of /our guys/ I still do not know to this day. It was complete alright, and pointed in exactly the right direction. Lu starts talking to me about which one of us is going to go out there to the verge and give their life by dislodging the required stones, there not in that day being the idea yet of just tying some sturdy twist-vine to it and giving a pull from a safe distance.
+There it was after a gasping, wheezing sprint up the steep hillside, our "secret" weapon. Why it was kept secret to most of /our guys/ I still do not know to this day. It was complete alright, and pointed in exactly the right direction. Lu starts talking to me about which one of us is going to go out there to the verge and give their life by dislodging the required stones, there not in that day being the more modern practice yet of just tying some sturdy twist-vine to it and giving a pull from a safe distance.
 
 I had spied something on the way up and decided to have one over on old Lu. I say, "Well by rights, Lu, even as my friend, you need to be the one to go out there and do this. You know I got a family to support and my new position at camp comes with a lot of responsibility, one that there just ain't a lot of good replacements for. You think for a minute about what old Corporal Bogh would say in this situation. I'm sorry Lu, but I'm thinking of the Forest here. My hand to Ender-Of-All-Questions, this is my thinking, Lu. I'm sorry. I'll hear you out my friend, but..."
 
-We could see clearly that the Clorp were making ground, slowly. It looked like a great storm of people. Vast waves of blood an' people washing up against the shores of Rhino-Scat. We had indeed gotten lost in time a bit about the urgency of our mission. The sight was awesome.
+We could see clearly that the Clorp were making ground, slowly. It looked like a great storm of people. Vast waves of blood an' people washing up against the shores of Rhino-Scat. We had indeed gotten lost in time a bit about the urgency of our mission.
+
+/I/ apparently had, anyhow. But it's a memory me and Lu share fondly as we became real Crec /men/ by stages over the many moons of suffering in battle.
+
+We could now see the masses of Crec coming our way
+
+The sight was awesome.
 
 #+end_quote
 An inexplicable snicker from a younger Crec was shushed by his mother.
 #+begin_quote
 
-/I/ apparently had, anyhow. But it's a memory me and Lu share fondly as we became real Crec /men/ by stages over the many moons of suffering in battle.
-
-Having cleared my head and realizing I was in the middle of some unnecessary nonsense, I let him sit on my proposal for just a short while and was just about to let him in on it, but just then he got choked up a bit and stiffened and said, "Private Verk, sir! It has been a privilege fighting for our home, this Forest along side with you. Friend."
+Having cleared my head and realizing I was in the middle of some unnecessary nonsense, I let him sit on my proposal for just a drop-stone and was just about to let him in on gag, but just then he got choked up a bit and stiffened and said, "Private Verk, sir! It has been a privilege fighting for our home, this Forest along side with you. Friend."
 
 I saw a tear forming so I figured I should get a move on. Did I mention I was in a hurry now?
 
@@ -154,7 +165,7 @@ Laughter.
 
 "Lu!", I says, "Lu I was just having a go at ya pal! I spied a stick on the way up that should be long enough. I'll go back and fetch it! You shoulda seen your face!"
 
-I ran not one half of one boulder-door men[fn:: About 300 ft. See Appendix "Numeric Reckoning".] back down the trail and fetched the stick, and was back in a jiffy.
+I ran not one half of one boulder-door men[fn:: About 300 ft. See [[Numbers and Reckoning]].] back down the trail and fetched the stick, and was back in a jiffy.
 
 Lu and I heaved and heaved and oh how that little tree's trunk bent and bent. My hands were shaking. Lu's hands were shaking still more. All at once, we heard a rumble. We hadn't even seen any of the stay boulders move a bug before we heard it. It was like The Army of Ender-Of-All-Questions itself was at full charge! Coming to save the day!
 
@@ -2115,6 +2126,7 @@ Everything is subject to change, eebureetang. But you'll have to re-title if we 
 
 ** Bugs
 
+- something-something burrow -vs- something-burrow
 - The hide: it is big enough for the two men to lay out on opposite sides with their heads almost touching but /also/ big enough for a tooth-cat to stick itself in part way and swat and kill them? Naw. Splain.
 - Are we /sure/ they have bronze?
 - Sure seems like they should look around more walking in the dangerous woods.
@@ -2134,6 +2146,7 @@ Everything is subject to change, eebureetang. But you'll have to re-title if we 
 
 ** Notes
 
+- If 'Gonk, Son of Blank' is a kind of hero, there should be place names that use both 'Gonk' and 'Blank'. Maybe Forestic things that come in pairs could use both: Two gigantic siege weapons (and only a pair, like 'fat man and little boy') can be named 'Gonk' and 'Blank'.
 - An explanation about "advanced vs caveman-stupid" contradictions.
   - How can they build that badass palace and not know to tie a vine to a rock.
   - How can they not know about: rope, other obvious stuff?
