--- a/gog.org
+++ b/gog.org
@@ -180,7 +180,7 @@ I mean these things come crashing down, leveling everything! There were trees a 
 Then the rhino started meeting up with the men... and the Clorp.
 
 #+end_quote
-Verk gave his signature knowing wink, and the audience laughed, nervously.
+Verk gave his signature knowing wink and the audience laughed nervously.
 #+begin_quote
 
 It went through ranks upon ranks of the Clorp. Leaving a genuine bloody mess. Walking through the aftermath was like seeing a flooded mouse burrow after a good rhino trampling. It is something I will always remember.
