--- a/gog.org
+++ b/gog.org
@@ -183,7 +183,7 @@ Then the rhino started meeting up with the men... and the Clorp.
 Verk gave his signature knowing wink and the audience laughed nervously.
 #+begin_quote
 
-It went through ranks upon ranks of the Clorp. Leaving a genuine bloody mess. Walking through the aftermath was like seeing a flooded mouse burrow after a good rhino trampling. It is something I will always remember.
+It went through rank upon rank of the Clorp. Leaving a genuine bloody mess. Walking through the aftermath was like seeing a flooded mouse burrow after a good rhino trampling. It is something I will always remember.
 
 Our men cheered mightily, tempered indeed by the thought of those among our ranks who tragically got caught up in the destruction.
 
