--- a/gog.org
+++ b/gog.org
@@ -188,10 +188,10 @@ It went through rank upon rank of the Clorp. Leaving a genuine bloody mess. Walk
 Our men cheered mightily, tempered indeed by the thought of those among our ranks who tragically got caught up in the destruction.
 
 #+end_quote
-The audience collectively gave a pained, but soft groan of regret and some gently pulled on their noses.[fn:: This is a gesture of lament and deep respect for unavoidable sacrifices made.]
+The audience collectively gave a pained but soft groan of regret and some gently pulled on their noses.[fn:: This is a gesture of lament and deep respect for unavoidable sacrifices made.]
 #+begin_quote
 
-And that was the end of The Battle of the Snake-Meal. It really was over just about that fast. We really got lucky, plus, you can be sure, we stroked all the snails we could find[fn:: This is a bit of luck-giving for the Crec. Rabbit's foot, but taken just a bit more literally. The snail comes up a lot in their mythology.]. At this point, the Clorp who weren't dead were running for their lives, leaving us a wide swath of good farming land to occupy. Which we used to great effect in years to come, leveraging our successes[fn:: This is the great, mostly unoccupied bulge to Crec's south that still makes up most of its territory.].
+And that was the end of The Battle of the Snake-Meal. It was over just about that fast. We got lucky, plus, you can be sure, we stroked all the snails we could find[fn:: This is a bit of luck-giving for the Crec. Rabbit's foot, but taken just a bit more literally. The snail comes up a lot in their mythology.]. At this point, the Clorp who weren't dead were running for their lives, leaving us a wide swath of good farming land to occupy. Which we used to great effect in years to come, leveraging our successes[fn:: This is the great, mostly unoccupied bulge to Crec's south that still makes up most of its territory.].
 #+end_quote
 
 A quiet, knowing laugh from the audience made its way around the burrow.
