--- a/gog.org
+++ b/gog.org
@@ -196,7 +196,7 @@ And that was the end of The Battle of the Snake-Meal. It was over just about tha
 
 A quiet, knowing laugh from the audience made its way around the burrow.
 
-Verk slowly sat back in his carefully shaped and ornamented stone chair. He slowly interlaced his fingers over his remarkably big belly, let out a long, slow, quiet sigh, and seemed to be challenging the audience to interrupt his rest.
+Verk slowly sat back in his carefully shaped and ornamented stone chair. He slowly interlaced his fingers over his remarkably big belly, let out a long, slow, quiet sigh and seemed to be challenging the audience to interrupt his rest.
 
 Indeed, no one was quite sure what to do. It was understood that you stay seated and reverent, but meanwhile your mind was sprinting around trying to guess exactly the right posture and empathetic tilt-of-the-head, much less /saying/ anything. It was a very quiet sort of panic.
 
