--- a/gog.org
+++ b/gog.org
@@ -204,7 +204,7 @@ It had been a while, possibly the longest pause-for-effect at the time. /What if
 
 Verk slowly opened his eyes. "Now, do any of the precious cavechildren in our audience have any questions? Maybe you get an idea of what silly old Verk is trying to say here?" For Verk especially loved the children's questions. He made the sweetest mall-Santa[fn:: The Crec would say 'looks-nice-traveler'.] smile he could muster.
 
-One of the older male cousins[fn:: The Zog clan, like all, was ranked in a very loose way by generation: grandparents, parents, cousins, cavebabies. Grav was technically still a cousin, but was the actual age of many parents.] stood, and looked behind him at his nervous mother.
+One of the older male cousins[fn:: The Zog clan, like all other Crec clan, was ranked in a very loose way by generation: grandparents, parents, cousins, cavebabies. Grav was technically still a cousin, but was the actual age of many parents.] stood, and looked behind him at his nervous mother.
 
 "Father-Brother Verk, why was the boulder-rhino kept a secret from the Crec army?"
 
