--- a/gog.org
+++ b/gog.org
@@ -208,7 +208,7 @@ One of the older male cousins[fn:: The Zog clan, like all other Crec clan, was r
 
 "Father-Brother Verk, why was the boulder-rhino kept a secret from the Crec army?"
 
-Verk was sure that he had covered this, and was duly annoyed. He stared at the boy for what seemed like a very long time. Naturally the boy fidgeted.
+Verk was sure that he had covered this and was duly annoyed. He stared at the boy for what seemed like a very long time. Naturally the boy fidgeted.
 
 "Little rhino-buck, do you remember me talking about that? It's not known nor is it likely ever to be known. /Genuine/ historical research has come up empty, so far, I'm afraid. You're a clever lad. Have a seat, please."
 
