--- a/gog.org
+++ b/gog.org
@@ -210,7 +210,7 @@ One of the older male cousins[fn:: The Zog clan, like all other Crec clan, was r
 
 Verk was sure that he had covered this and was duly annoyed. He stared at the boy for what seemed like a very long time. Naturally the boy fidgeted.
 
-"Little rhino-buck, do you remember me talking about that? It's not known nor is it likely ever to be known. /Genuine/ historical research has come up empty, so far, I'm afraid. You're a clever lad. Have a seat, please."
+"Little rhino-buck, do you remember me talking about that? It's not known nor is it likely ever to be known. /Genuine/ historical research has come up empty so far I'm afraid. You're a clever lad. Have a seat, please."
 
 A girl in her late teens, that could only charitably be considered a child stood, /with some off-putting confidence/, Verk thought. /Likely a lovely child. Well shaped./
 
